--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Welcome to Accio Jobs!</h1>
+	<img src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000" height="200">
+	<p>5 software program developer profession paths</p>
+	<ul>
+		<li>Cloud dveloper</li>
+		<li>Desktop dveloper</li>
+		<li>Video Sport dveloper</li>
+		<li>Mobile dveloper</li>
+		<li>Web dveloper</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
